[gd_scene load_steps=2 format=3 uid="uid://btm2yjubq8pe8"]

[ext_resource type="Script" path="res://WindowContent/window_flexeditor.gd" id="1_qrvjc"]

[node name="window_flexeditor" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qrvjc")

[node name="container" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="scroll_container" type="ScrollContainer" parent="container"]
offset_right = 1152.0
offset_bottom = 604.0
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="grid_container" type="GridContainer" parent="container/scroll_container"]
theme_override_constants/h_separation = 0
columns = 2

[node name="ColorRect" type="ColorRect" parent="container"]
custom_minimum_size = Vector2(0, 40)
offset_top = 608.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 8
color = Color(0.494118, 0.494118, 0.494118, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="container/ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 510.0
grow_horizontal = 2
grow_vertical = 2

[node name="record_keyframes" type="CheckBox" parent="container/ColorRect/HBoxContainer"]
offset_right = 98.0
offset_bottom = 40.0
text = "Auto-Key"

[node name="options_target" type="OptionButton" parent="container/ColorRect/HBoxContainer"]
offset_left = 102.0
offset_top = 4.0
offset_right = 343.0
offset_bottom = 35.0
size_flags_vertical = 4
item_count = 3
selected = 0
popup/item_0/text = "Local Flex Editor State"
popup/item_0/id = 0
popup/item_1/text = "Current Animation Frame"
popup/item_1/id = 1
popup/item_2/text = "Automatic"
popup/item_2/id = 2

[node name="apply_keyframe" type="Button" parent="container/ColorRect/HBoxContainer"]
offset_left = 347.0
offset_top = 4.0
offset_right = 478.0
offset_bottom = 35.0
size_flags_vertical = 4
text = "Apply Keyframe"

[node name="save_as_pose" type="Button" parent="container/ColorRect/HBoxContainer"]
offset_left = 482.0
offset_top = 4.0
offset_right = 588.0
offset_bottom = 35.0
size_flags_vertical = 4
text = "Save as Pose"

[connection signal="toggled" from="container/ColorRect/HBoxContainer/record_keyframes" to="." method="_on_record_keyframes_toggled"]
[connection signal="item_selected" from="container/ColorRect/HBoxContainer/options_target" to="." method="_on_options_target_item_selected"]
[connection signal="pressed" from="container/ColorRect/HBoxContainer/apply_keyframe" to="." method="_on_apply_keyframe_pressed"]
